@@ -42,6 +42,7 @@ Version 1.4.4 - CVS
     Bieliauskas for spotting big signature "option".
   - $agresive_decoding configuration option changed to $aggressive_decoding.
     Fixed spelling.
+  - Fixed $custom_css loading in squirrelspell plugin.
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
